--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
          <link href="css/index.css" type="text/css" rel="stylesheet">
      </head>
      <body>
-         <nav>
+         <nav> <!--top navigation-->
              <div class = "nav_element">
                 <p class=nav_text>Home</p> 
              </div>
@@ -15,12 +15,34 @@
                 <p class=nav_text>Habitat</p>
             </div>
          </nav>
-
+<!----------sidebar part--------->
          <div class = "side_nav">
-             <div class = "pet"></div>
-             <div class = "stats"></div>
+             <div class = "pet">
+                <img src="images/shyguy.jpg">
+                <p></p><h1>Shy Guy</h1>
+             </div>
+             <div class = "stats">
+               <div class = "info"><b>Pet Stats</b></div>
+               <div class = "info">Age: 4 years old</div>
+               <div class = "info">Breed: Short Hair Domestic Cat</div>
+               <div class = "info">Favorite Toy: Feather Wand</div>
+             </div>
+             
          </div>
-         <div class = "content_background"></div>
+         <!--main content area-->
+         <div class = "content_background">
+             <div class = "about_shyguy">
+                 <img src= "images/shyguy5.jpg" class = "left">
+                 <h3>Meet Shy Guy!</h3>
+                 Shy Guy is my pet cat. He likes to watch class every now and then after he wakes up from his nap.
+             </div>
+             <div class = "pics">
+                 <h1>Shy Guy is the cutest!</h1>
+                 <img src= "images/shyguy3.jpg" class = "pictures">
+                 <img src= "images/shyguy2.jpg" class = "pictures">
+                 <img src= "images/shyguy4.jpg" class = "pictures">
+             </div>
+         </div>
 
 
      </body>
